...
        body: ListView(children: [
          Padding(
            padding: EdgeInsets.fromLTRB(0, 60, 0, 0),
          ),
          Center(
              child: Text("$stepTimeRemaining",
                  key: Key("time-text"),
                  style: TextStyle(fontSize: 96, color: Colors.white))),
          Padding(
            padding: EdgeInsets.fromLTRB(0, 60, 0, 0),
          ),
          Center(
              child: Text("${currentRecipeStep.text}",
                  key: Key("current-recipe-text"),
                  style: TextStyle(fontSize: 24, color: Colors.white))),
          Padding(
            padding: EdgeInsets.fromLTRB(0, 60, 0, 0),
          ),
          Text("Steps", style: TextStyle(color: Colors.white)),
          for (RecipeStep step in remainingSteps)
...
